commit after taking data and content out of the locations-list.pug fils

--- a/app_server/views/location-info.pug
+++ b/app_server/views/location-info.pug
@@ -14,7 +14,7 @@ block content
             i.far.fa-star
             i.far.fa-star
           p 125 High Street, Reading, RG6 1PS
-          .card.car-primary
+          .card.card-primary
             .card-block
               h2.card-title Opening hours
               p.card-text Monday - friday : 7:00am - 7:00pm
