--- a/app_server/views/generic-text.pug
+++ b/app_server/views/generic-text.pug
@@ -5,7 +5,4 @@ block content
       h1= title
   .row
     .col-lg-8
-      p
-        | Loc8r was created to help people find places to sit and get a bit of work done.
-        | <br><br>
-        | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed lorem ac nisi dignissim
+      p !{(content).replace(/\n/g, '<br>')}
