Express App with REST API

--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -8,6 +8,7 @@ html(lang='en')
     script(src='/javascripts/jquery-3.3.1.min.js')
     script(src='/javascripts/bootstrap.bundle.min.js')
     script(src='/javascripts/fontawesome-all.js')
+    block script
   body
     nav.navbar.fixed-top.navbar-expand-md.navbar-dark
       a.navbar-brand(href='/') Loc8r
