--- a/app_server/views/location-review-form.pug
+++ b/app_server/views/location-review-form.pug
@@ -1,11 +1,15 @@
 extends layout
+block script
+  script(src='/javascripts/validation.js')
 block content
   .row.banner
     .col-12
       h1= pageHeader.title
   .row
     .col-md-8
-      form(action='/location', method='get')
+      form(action='', method='post')
+        -if (error == 'val')
+          .alert.alert-danger(role="alert") All fields required, please try again.
         .form-group.row
           label.col-sm-2.col-form-label(for='name') Name
           .col-sm-10
