chap8 selectively use Angular to build the page

--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -8,7 +8,6 @@ html(lang='en')
     script(src='/javascripts/jquery-3.3.1.min.js')
     script(src='/javascripts/bootstrap.bundle.min.js')
     script(src='/javascripts/fontawesome-all.js')
-    block script
   body
     nav.navbar.fixed-top.navbar-expand-md.navbar-dark
       a.navbar-brand(href='/') Loc8r
@@ -24,3 +23,4 @@ html(lang='en')
         .row
           .col-12
             small &copy; Himanshu 2018
+    block scripts
